--- a/movies/src/main/res/layout/item_movie.xml
+++ b/movies/src/main/res/layout/item_movie.xml
@@ -18,10 +18,11 @@
             android:layout_width="96dp"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher_round"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            android:contentDescription="Movie Image" />
 
         <TextView
             android:id="@+id/item_movie_release_date"
