--- a/movies/src/main/res/menu/menu.xml
+++ b/movies/src/main/res/menu/menu.xml
@@ -5,7 +5,7 @@
         android:id="@+id/sort"
         android:enabled="true"
         android:icon="@drawable/ic_sort"
-        app:showAsAction="ifRoom|withText"
+        app:showAsAction="always"
         android:title="Sort" />
 
 </menu>
