--- a/movies/src/main/res/layout/review.xml
+++ b/movies/src/main/res/layout/review.xml
@@ -10,11 +10,13 @@
         android:id="@+id/reviewAuthor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/reviewContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
         android:alpha="0.7" />
 </LinearLayout>
